-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
None
-
Fully Compatible
-
ALL
-
Repl 2020-02-24
-
None
-
None
-
None
-
None
-
None
-
None
-
None
In NewOplogFetcher::_connect, if connect/auth fails, it depends on _oplogFetcherRestartDecision->shouldContinue to determine whether it should retry the connection. During initial sync, shouldContinue always return true for network errors. This means, the while loop in _connect() is effectively an infinite loop during initial sync. This is fine but it should honor the shutdown signal. And it would be better to backoff a bit on retries.