SERVER-46171: NewOplogFetcher should check for shutdown before retrying the initial connection